--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
 ktorVersion=2.0.2
 kotlinVersion=1.7.0
 logbackVersion=1.2.11
+hikariVersion=5.0.1
+mysqlConnectorVersion=8.0.29
+jBcryptVersion=0.4
+
 kotlin.code.style=official
